# professor_application_qa_system_with_Knowledge_Graph

./: .env.example  .gitignore  README.md  entities.csv  lab.ipynb  profile.db  pyproject.toml  record_time.txt  requirements.txt
docs/: architecture.md  pipeline.md
pgvector_ini/: docker-compose.yaml
pgvector_ini/initdb/: 001_init.sql.sql
src/: relationships_test.csv  run.py  table_data_1.json
src/KG_builder/: builder.py  config.py  triple_models.py
src/KG_builder/convert_pdf_to_text/: __init__.py  cli.py  core.py  extract_table.py
src/KG_builder/extract/: definition.py  extract_stage.py  (+5 more)
src/test/: test_embedding_storage.py  test_predicates_dao.py
table_data/: AN THỊ HOÀI THU ANH_1.json  BAN HÀ BẰNG_1.json  BÙI BÍCH XUÂN_1.json  BÙI GIA THỊNH_1.json  BÙI HOÀNG NGỌC_1.json  BÙI HUY HẢI_1.json  BÙI HẢI BÌNH_1.json  BÙI KHẮC CƯỜNG_1.json  BÙI KIM HIẾU_1.json  BÙI LÊ DIỄM TRANG_1.json  BÙI MINH DƯƠNG_1.json  BÙI MINH QUÝ_1.json  BÙI MẠNH TÙNG_1.json  BÙI MỸ TRINH_1.json  BÙI NGỌC HIỀN_1.json  BÙI NGỌC LAN_1.json  BÙI PHÚ HƯNG_1.json  BÙI QUANG NGHĨA_1.json  BÙI QUỐC BẢO_1.json  BÙI THANH DANH_1.json  BÙI THÀNH KHOA_1.json  BÙI THỊ BỬU HUÊ_1.json  BÙI THỊ HIẾU_1.json  BÙI THỊ HẠNH_1.json  BÙI THỊ HỒNG THẮM_1.json  BÙI THỊ LÊ MINH_1.json  BÙI THỊ THANH DIỆU_1.json  BÙI THỊ THU HUYỀN_1.json  BÙI THỊ THU TRANG_1.json  BÙI THỊ THÚY LUYỆN_1.json  BÙI TIẾN SỸ……………………………………………….json  BÙI TÁ LONG.json  BÙI VĂN HÀO_1.json  BÙI VĂN HÙNG_1.json  BÙI VĂN LỢI_1_1.json  BÙI VĂN LỢI_2.json  BÙI VĂN NGỌC_1.json  BÙI XUÂN DŨNG_1_1.json  BÙI XUÂN DŨNG_2.json  BÙI ĐÌNH TÚ_1.json  (+114 more)
(+18 files in other folders)
